--- a/思维类模型/思维导图（脑图）.md
+++ b/思维类模型/思维导图（脑图）.md
@@ -1,17 +1,5 @@
-# 思维导图（脑图）
+# 已迁移：思维导图（脑图）
 
-## 简介
-思维导图以中心主题为核心，沿放射状分支发散，适合做头脑风暴与结构化归纳。
+此文件已重命名为 `思维导图-脑图.md`。为避免文件名带中文括号导致的访问问题，请使用新文件：
 
-## 用法
-- 以中心议题为起点，添加一级分支表示关键主题。
-- 用关键词替代长句，配合颜色/图标提高可辨识度。
-- 先发散再收敛，最后形成行动清单或大纲。
-
-## 例子
-新品发布脑图到行动清单（两小时工作坊）
-
-- 第1阶段（30分钟发散）：中心“V3发布”，一级分支：目标、功能、里程碑、风控、资源；每人贴 10 张便签。
-- 第2阶段（30分钟收敛）：对每个一级分支做KJ分组，选TOP3；
-- 第3阶段（30分钟排序）：依据影响×可行性二维优先级；
-- 第4阶段（30分钟落地）：将TOP项转为行动卡（负责人、截止、成功度量）。
+[跳转到新页面](思维导图-脑图.md)
